Next Auth [compleated]

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+# Deplyment
+NEXT_PUBLIC_SERVER_URL=
+
+# Next Auth
+NEXTAUTH_SECRET=ShrXjlCrO70y/yD2L5anWmI+oIHhQy7Y94smSAAllnY=
+NEXTAUTH_URL=http://localhost:3000/
 
 # Grafbase
 NEXT_PUBLIC_GRAFBASE_API_URL=https://share-projects-nextjs-app-main-cesarv28.grafbase.app/graphql
