--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
-grafbase/.env
 
 # vercel
 .vercel
@@ -36,3 +35,6 @@ grafbase/.env
 *.tsbuildinfo
 next-env.d.ts
 
+# Grafbase
+.grafbase/
+grafbase/.env
