--- a/.example.env
+++ b/.example.env
@@ -5,10 +5,8 @@ NEXT_PUBLIC_SERVER_URL=
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=
 
-# Grafbase
-NEXT_PUBLIC_GRAFBASE_API_URL=
-NEXT_PUBLIC_GRAFBASE_API_KEY=
+# Data base
+#KEY=VALUE
 
-# Google
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# Auth Providers 
+#KEY=VALUE
